<resources>
    <string name="app_name">Sleep Track +</string>
    <string name="app_info">About this Application</string>
    <string name="options">Options…</string>
    <string name="morning_monitoring">Morning Monitoring</string>
    <string name="monitoring_text">Press here to enter your morning monitoring data:</string>
    <string name="nav_open">Nav Menu Open</string>
    <string name="nav_closed">Nav Menu Closed</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="monitoring_form">Monitoring Form</string>
    <string name="dream_entry">Dream Entry</string>
    <string name="diary_entry">Diary Entry</string>
    <string name="take_a_profile_picture">Take a Profile Picture</string>
    <string name="sleeptack_options">SleepTack Options:</string>
    <string name="enter_a_personalised_name">Enter a personalised name:</string>
    <string name="add_a_profile_picture_to_your_account">Add a profile picture to your account?</string>
    <string name="profile_picture">profile_picture</string>
    <string name="save_settings_and_return_to_dashboard">Save Settings and Return to Dashboard</string>
    <string name="navigation">Navigation</string>
    <string name="new_user">New User</string>
    <string name="morning_monitoring_form">Please fill in the form below daily.</string>
    <string name="submit">Submit</string>
    <string name="bpm">bpm</string>
    <string name="waking_heart_rate">Waking Heart Rate:</string>
    <string name="standing_heart_rate">Standing Heart Rate:</string>
    <string name="waking_time">Waking Time:</string>
    <string name="hours">hours</string>
    <string name="waking_time_caption">Please select the time you woke up using the time picker below. Time is in 24 hour format.</string>
    <string name="sleep_quality">Sleep Quality:</string>
    <string name="mental_state">Mental State:</string>
    <string name="sleep_quality_caption">Select between 1–5 with 5 being well rested.</string>
    <string name="mental_state_caption">Select between 1–5 with 5 being normal.</string>
    <string name="diary_title">Diary Title:</string>
    <string name="insert_entry">Insert Entry:</string>
    <string name="daily_diary">Daily Diary:</string>
    <string name="memorable_dream">Memorable Dream?</string>
    <string name="diary_caption">Here you can write about your day to get things off your chest.</string>
    <string name="standing_hr">Standing HR:</string>
    <string name="waking_hr">Waking HR:</string>
    <string name="sleep_quantity">Sleep Quantity:</string>
    <string name="heart_rate_monitoring_data">Heart Rate Monitoring Data:</string>
    <string name="app_info_text">SleepTrack +, Version: 1.0</string>
    <string name="delete_all_diary_entries">Delete all Diary Entries?</string>
    <string name="delete_morning_monitoring_data">Delete Morning Monitoring Data?</string>
    <string name="delete_personal_settings">Delete Personal Settings?</string>
    <string name="warning_deleting_these_settings_cannot_be_undone_all_data_will_be_lost">WARNING: Deleting these settings cannot be undone, all data will be lost.</string>
    <string name="reset_options">Reset Options:</string>
    <string name="these_are_the_number_of_entries_you_currently_have_within_the_app">These are the number of entries you currently have within the app!</string>
    <string name="monitoring_entries">Monitoring Entries:</string>
    <string name="number_of_diary_entries">Number of Diary Entries:</string>
    <string name="your_statistics">Your Statistics:</string>
    <string name="this_graph_shows_the_average_time_slept_over_a_duration_of_a_week">This graph shows the average time slept over a duration of a week.</string>
    <string name="sleeping_data">Sleeping Data:</string>
    <string name="hr_graph_description">This graph shows your inputted bpm of both waking and standing heart rates over a duration of a week.</string>
    <string name="diary_tutorial">To add a new entry, press on the plus button in the right hand corner of the screen. This will take you to the diary entry page, where you can enter a title for your entry and the entry itself. When submitting an entry, you will be returned to this diary page where you can view all entries. To view an entry, simply press on it and it will appear for you to read.</string>
    <string name="untitled">Untitled</string>
    <string name="here_is_a_list_of_all_your_current_entries_within_your_diary">Here is a list of all your current entries within your diary.</string>
    <string name="add_an_input">Add an input</string>
    <string name="entry">Entry:</string>
    <string name="title">Title:</string>
</resources>