<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/design_default_color_secondary_variant" />
        </com.google.android.material.appbar.AppBarLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_a_personalised_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <Space
            android:layout_width="1dp"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/add_a_profile_picture_to_your_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/border_for_profile_pic"
            android:contentDescription="@string/profile_picture" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/take_a_profile_picture"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_settings_and_return_to_dashboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/warning_deleting_these_settings_cannot_be_undone_all_data_will_be_lost"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_shared_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_personal_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/red" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_all_diary_entries"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/red" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_monitoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_morning_monitoring_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/red" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>