<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/your_dashboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/heart_rate_monitoring_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/hr_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/waking_hr_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:text="@string/waking_hr" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/standing_hr_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:text="@string/standing_hr" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hr_graph_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sleeping_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/hours_slept_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/sleep_quantity_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:text="@string/sleep_quantity" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/sleep_quality_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp"
                android:layout_marginLeft="210dp"
                android:text="@string/sleep_quality" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/this_graph_shows_the_average_time_slept_over_a_duration_of_a_week"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/your_statistics"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_box"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/number_of_diary_entries"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/diary_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="50sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_box"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/monitoring_entries"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/monitoring_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="50sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/these_are_the_number_of_entries_you_currently_have_within_the_app"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>