<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/morning_monitoring_form"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingLeft="50dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_alarm_24"
                android:drawableLeft="@drawable/ic_baseline_alarm_24"
                android:text="@string/waking_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:text="@string/waking_time_caption"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TimePicker
                android:id="@+id/waking_time_picker"
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:timePickerMode="spinner" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_favorite_24"
                android:drawableLeft="@drawable/ic_baseline_favorite_24"
                android:text="@string/waking_heart_rate"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/waking_hr"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:inputType="number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:paddingLeft="125dp"
                    android:paddingTop="20dp"
                    android:text="@string/bpm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_favorite_24"
                android:drawableLeft="@drawable/ic_baseline_favorite_24"
                android:text="@string/standing_heart_rate"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/standing_hr"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:inputType="number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:paddingLeft="125dp"
                    android:paddingTop="20dp"
                    android:text="@string/bpm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_emoji_emotions_24"
                android:drawableLeft="@drawable/ic_baseline_emoji_emotions_24"
                android:text="@string/mental_state"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:text="@string/mental_state_caption"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <!--ref 18/04/21-->
            <!--    https://material.io/components/sliders/android#using-sliders-->
            <!--    for sliders-->
            <com.google.android.material.slider.Slider
                android:id="@+id/mental_state"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:stepSize="1.0"
                android:value="1.0"
                android:valueFrom="0.0"
                android:valueTo="5.0" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_king_bed_24"
                android:drawableLeft="@drawable/ic_baseline_king_bed_24"
                android:text="@string/sleep_quality"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:text="@string/sleep_quality_caption"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sleep_quality"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:stepSize="1.0"
                android:value="1.0"
                android:valueFrom="0.0"
                android:valueTo="5.0" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_king_bed_24"
                android:drawableLeft="@drawable/ic_baseline_king_bed_24"
                android:text="@string/sleep_quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/sleep_quantity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:inputType="number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:paddingLeft="125dp"
                    android:paddingTop="20dp"
                    android:text="@string/hours"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_bedtime_24"
                android:drawableLeft="@drawable/ic_baseline_bedtime_24"
                android:text="@string/memorable_dream"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/memorable_dream"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="textMultiLine" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/monitoring_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>

