<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/diary_entry_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_diary"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_caption"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_menu_book_24"
                android:drawableLeft="@drawable/ic_baseline_menu_book_24"
                android:text="@string/diary_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/diary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_post_add_24"
                android:drawableLeft="@drawable/ic_baseline_post_add_24"
                android:text="@string/insert_entry"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/diary_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>